--- a/docs/sources/theory/loft.ipynb
+++ b/docs/sources/theory/loft.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "By definition, for a given parameter $v_{j0}$, the surface $S$ is coincident with the curve $C_j$:\n",
     "$$\n",
-    "C_j(u) = S(u, v_j0) = \\sum_{i} N_{i, p}(u) \\sum_{j} N_{j, q}(v_{j0}) P_{i, j}\n",
+    "C_j(u) = S(u, v_{j0}) = \\sum_{i} N_{i, p}(u) \\sum_{j} N_{j, q}(v_{j0}) P_{i, j}\n",
     "$$\n",
     "\n",
     "Through identification, we establish the relationship:\n",
@@ -40,7 +40,7 @@
     "P_i^{(j0)} = \\sum_{j} N_{j, q}(v_{j0}) P_{i, j}\n",
     "$$\n",
     "\n",
-    "This leads to a linear system equation for each value of $i$, facilitating the calculation of surface points.\n"
+    "This leads to a linear system equation for each value of $i$, facilitating the calculation of surface control points.\n"
    ]
   },
   {
@@ -52,11 +52,11 @@
     "For each value of $i$, the relationship established above leads to a linear system represented by the following matrix equation:\n",
     "$$\n",
     "\\begin{pmatrix}\n",
-    "N_{0,q}(v_0) & \\cdots & N_{i,q}(v_0) & \\cdots & N_{m,q}(v_0)\\\\ \n",
+    "N_{0,q}(v_0) & \\cdots & N_{j,q}(v_0) & \\cdots & N_{m,q}(v_0)\\\\ \n",
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots\\\\ \n",
     "N_{0,q}(v_{j0}) & \\cdots & N_{j,q}(v_{j0}) & \\cdots & N_{m,q}(v_{j0})\\\\ \n",
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots\\\\ \n",
-    "N_{0,q}(v_m) & \\cdots & N_{i,q}(v_m) & \\cdots & N_{m,q}(v_m)\n",
+    "N_{0,q}(v_m) & \\cdots & N_{j,q}(v_m) & \\cdots & N_{m,q}(v_m)\n",
     "\\end{pmatrix}\n",
     "\\begin{pmatrix}\n",
     "P_{i,0}\\\\ \n",
