Update notebooks related to `plot_bs_curve_2d`

--- a/docs/sources/theory/foils_param.ipynb
+++ b/docs/sources/theory/foils_param.ipynb
@@ -54,6 +54,7 @@
     "from pygbs import gbs\n",
     "from pygbs import plotlyplot as gbp\n",
     "import plotly.graph_objects as go\n",
+    "\n",
     "# filename = \"../../../tests/in/V43012.dat\"\n",
     "# filename = \"../../../tests/in/S810.dat\"\n",
     "# filename = \"../../../tests/in/e379.dat\"\n",
@@ -64,9 +65,9 @@
     "\n",
     "x, y = read_airfoil_data(filename)\n",
     "\n",
-    "crv_2d = gbs.approx(pts = [[x_, y_] for x_, y_ in zip(x, y)], deg = 5, d_max=0.001, d_avg=0.0001)\n",
+    "crv_2d = gbs.approx(pts=list(map(list, zip(x, y))), deg=5, d_max=1e-3, d_avg=1e-4)\n",
     "\n",
-    "fig = gbp.plot_bs_curve_2d([ crv_2d], ctrl_pts_on=True)\n",
+    "fig = gbp.plot_bs_curve_2d([crv_2d], ctrl_pts_on=True)\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(\n",
@@ -76,7 +77,6 @@
     "        marker_color='red'\n",
     "    )\n",
     ")\n",
-    "\n",
     "\n",
     "fig.show()\n",
     "\n",
@@ -96,9 +96,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crv_2d = gbs.approx(pts = [[x_, y_] for x_, y_ in zip(x, y)], deg = 5, d_max=0.005, d_avg=0.0005)\n",
+    "crv_2d = gbs.approx(pts=list(map(list, zip(x, y))), deg=5, d_max=5e-3, d_avg=5e-4)\n",
     "\n",
-    "fig = gbp.plot_bs_curve_2d([ crv_2d], ctrl_pts_on=True)\n",
+    "fig = gbp.plot_bs_curve_2d(crv_2d, ctrl_pts_on=True)\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(\n",
@@ -108,7 +108,6 @@
     "        marker_color='red'\n",
     "    )\n",
     ")\n",
-    "\n",
     "\n",
     "fig.show()\n",
     "\n",
@@ -128,9 +127,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crv_2d = gbs.interpolate_cn( [[x_, y_] for x_, y_ in zip(x, y)], 5)\n",
+    "crv_2d = gbs.interpolate_cn(list(map(list, zip(x, y))), 5)\n",
     "\n",
-    "fig = gbp.plot_bs_curve_2d([ crv_2d], ctrl_pts_on=True)\n",
+    "fig = gbp.plot_bs_curve_2d(crv_2d, ctrl_pts_on=True)\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(\n",
@@ -140,7 +139,6 @@
     "        marker_color='red'\n",
     "    )\n",
     ")\n",
-    "\n",
     "\n",
     "fig.show()\n",
     "\n",
@@ -164,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
